--- a/my_web/style.css
+++ b/my_web/style.css
@@ -1,3 +1,9 @@
+@function responsive-font($width) {
+  @return ($width * 0.0434) + 0%;
+}
+
+
+
 @media only screen and (min-width: 960px) {
 
     html{
@@ -152,6 +158,27 @@
 }
 
 
+    #img2 img{
+        width: 32.4rem;
+    }
+    #img1 img{
+        width: 42.7rem;
+
+    }
+
+    .menu-button {
+        font-size: 2.4rem;
+    }
+
+    #heroButtons
+    {
+        gap: 2.5rem;
+    }
+
+    #heroBottom{
+        gap: 3rem;
+    }
+
 /* large web*/
 @media only screen and (min-width: 1440px) {
 
@@ -161,10 +188,29 @@
 
 }
 
-@media only screen and (min-width: 360px) and (max-width:720px) {
+@media only screen and (max-width:720px) {
     html{
-    font-size: 19.2%;
+    font-size: 0.694vw;
     }
+
+
+    .footerC{
+    width: 100vw;
+    }
+    .container{
+    width: 100vw;
+    }
+    section, header, footer{
+    width: 100vw;
+    }
+    html{
+        width: 100vw;
+    }
+
+
+  
+
+
 
 }
 
@@ -180,8 +226,8 @@
         transition: max-height 0.5s ease;
         flex-direction: column;
         position: absolute;
-        top: 70px;
-        right: 75px;
+        top: 8.14rem;
+        right: 12.2rem;
         background-color: #432E22;
         padding: 0 1rem;
         gap: 1rem;
@@ -200,11 +246,13 @@
 
     header {
     position: relative;
-    z-index: 1000;
-}
+    z-index: 1000;  
+    }
 
 
 }
+
+
 
 @media only screen and (min-width: 720px) and (max-width:960px) {
 
@@ -214,9 +262,23 @@
 
     }
 
-    .footerC{
+     .footerC{
     width: 720px;
     }
+    .container{
+    width: 720px;
+    }
+    section, header, footer{
+    width: 720px;
+    }
+    html{
+        width: 720px;
+    }
+
+
+}
+@media only screen /*and (min-width: 720px)*/ and (max-width:960px) {
+
 
     #img1{
         order: 0;
@@ -232,15 +294,15 @@
 
     #heroImg h1 {
         order: 1;
-        margin: 0px -15px;
-        width: 165px;
-        padding: 40px 10px 20px 10px;
+        margin: 0px -2.44rem;
+        width: 26.86rem;
+        padding: 6.51rem 1.63rem 3.25rem 1.63rem;
     }
 
     #heroS{
         background-image: url("images/vector7.png");
         background-size: 100% 100%;
-        height: 440px;
+        height: 71.61rem;
         width: 100%;
 
     }
@@ -249,18 +311,9 @@
     }
 
     #heroImg{
-        height: 380px;
+        height: 61.85rem;
     }
-    .container{
-    width: 720px;
-    }
-    section, header, footer{
-    width: 720px;
-    }
-    html{
-        width: 720px;
-    }
-
+   
     #heroBottom{
     width: 45rem;
     justify-self: flex-end;
@@ -299,7 +352,7 @@
     }
 
     #menu h3{
-        padding-left: 30px;
+        padding-left: 4.88rem;
     }
 
 
@@ -314,17 +367,11 @@
 
     #menuS{
         /* height: 1568px; */
-        padding: 110px 0px 110px 0px;
+        padding: 17.9rem 0px 17.9rem 0px;
         background-size: 100% 100%;
 
     }
-    .menu{
-
-        
-    }
-
-
-
+    
 
     #mix{
         padding: 0px 10rem 0px 65rem;
@@ -354,15 +401,25 @@
 
 
 
+#hIcon{
 
+      display: inline-block;
 
+}
 
+#hIcon svg{
+    overflow: visible;
 
+width:2.4rem;
+height:2.4rem;
+  display: inline-block;
 
+}
 
-
-
-
+#hIcon svg path{
+    width:2.4rem;
+height:2.4rem;
+}
 
 
 :root {
@@ -514,9 +571,6 @@ header{
 .header{
     display: flex;
     justify-content: space-between;
-}
-
-.header{
     list-style-type: none;
 
 }
@@ -545,19 +599,12 @@ header{
     gap: 1.9rem;
 }
 
-#img2 img{
-    width: 32.4rem;
-}
-#img1 img{
-    width: 42.7rem;
 
-}
 
 .menu-button {
-    font-size: 2.4rem;
     background: none;
     border: none;
-    color: #F1C18C;  /* same color as your links */
+    color: #F1C18C;
     cursor: pointer;
 }
 
@@ -566,6 +613,7 @@ header{
 {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 #heroImg h1{
     text-align: center;
@@ -576,13 +624,10 @@ header{
 {
     display: flex;
     flex-direction: row;
-    gap: 2.5rem;
-
 }
 #heroBottom{
     display: flex;
     flex-direction: column;
-    gap: 3rem;
 }
 
 #heroS{
@@ -590,8 +635,9 @@ header{
     background-position: center;
 }
 
+
 #avatar{
-    height: 285px;
+    height: 28.5rem;
 }
 
 #menuS{
@@ -699,7 +745,7 @@ input[type="email"]{
 }
 
 #join button[type="submit"]{
-    border: #432E22 solid 3px;
+    border: #432E22 solid 2px;
     border-radius: 30px;
     background-color: #604535;
     color: #FFF7EF;
@@ -819,12 +865,13 @@ input[type="email"]{
     padding-right: 5rem;
 }
 
-#cookiePage button{
+#cookiePage button[type="submit"]{
     padding: 1rem 2rem;
     border-radius: 2.4rem;
     border: #432E22 solid 0.2rem;
+    cursor: pointer; 
 }
-#cookiePage button:hover{
+#cookiePage button[type="submit"]:hover{
     transition: all 0.3s ease;
 }
 
@@ -865,10 +912,11 @@ input[type="email"]{
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    gap:4rem;
 }
 
 #cookieInfoS{
-    width: 1440px;
+    width: 1172px;
     background-color: #FFF7EF;
 }
 .cookieInfo{
@@ -900,7 +948,7 @@ input[type="email"]{
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 40px 0; /* no side padding — arrows sit at edges */
+  padding: 4rem 0; /* no side padding — arrows sit at edges */
   text-align: center;
   overflow: hidden;
   background-color: #FFF7EF;
@@ -923,7 +971,7 @@ input[type="email"]{
   width: 14rem;
   height: 14rem;
   object-fit: cover;
-  margin-bottom: 20px;
+  margin-bottom: 2rem
 }
 
 #avatar p{
@@ -980,3 +1028,30 @@ input[type="email"]{
 }
 
 
+.quantity-counter {
+    display: inline-flex;
+    align-items: center;
+    border-radius: 20px;
+    overflow: hidden;
+    max-width: 9.5rem;
+    border-radius: 2.4rem;
+    border: #432E22 solid 0.2rem;
+    background-color: rgba(255, 247, 239, 0.75);
+}
+
+.quantity-counter button {
+    border: none;
+    padding: 5px 10px;
+    font-size: 20px;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.quantity-counter input {
+    text-align: center;
+    border: none;
+    font-size: 2rem;
+    font-family: "Inria Serif";
+    width: 100%;
+    background-color: transparent;
+}
