--- a/my_web/style.css
+++ b/my_web/style.css
@@ -23,11 +23,6 @@
         display: none;
     }
 
-    #cookieMainS{
-    height: 68.2rem;
-    width: 144rem;
-
-    }
 
     #cookieInfoS{
     width: 144rem;
@@ -150,6 +145,26 @@
     padding-top: 7rem;
     }
 
+    #productMain{
+        height: 100%;
+    }
+
+   html.product, html.product body {
+    height: 100%;
+    }
+     #cookieInfoS{
+        height: 100%;
+        justify-content: center;
+    }
+    .cookieInfo{
+        align-self: center;
+    }
+    #cookieMainS {
+        width: 100%;
+        height: auto;
+        aspect-ratio: 1440 / 682;
+    }
+
 
 
 }
@@ -223,9 +238,7 @@
     section, header, footer{
     width: 100vw;
     }
-    html{
-        width: 100vw;
-    }
+
 
     .ignoreMix {
     right: 80rem;
@@ -238,6 +251,10 @@
     #productVector{
     width: 144rem;
 }
+#cookieMainS{
+    height: 68.2rem;
+}
+    
 
 
   
@@ -247,7 +264,7 @@
 }
 
 
-@media only screen and (max-width:960px) {
+@media only screen and (max-width: 960px) {
 
     
 
@@ -285,39 +302,57 @@
     font-size: 2rem;
     }
 
+    /* #productMain{
+        height: 100vw;
+    }
+    body, html{
+        height: 100vw;
+    } */
+
+     #cookieInfoS{
+        height: 100%;
+        justify-content: center;
+    }
+    .cookieInfo{
+        align-self: center;
+    }
+
+
+    #cookieMainS {
+        width: 100%;
+        height: auto;
+        aspect-ratio: 1440 / 682;
+    }
+
 
 }
 
 
 
-@media only screen and (min-width: 720px) and (max-width:960px) {
+@media only screen and (min-width: 720px) and (max-width: 960px) {
 
     
     html{
-    font-size: 38.4%;
+    font-size: 31.25%;
 
     }
 
-     .footerC{
+    section, header, footer, html, #productVector{
     width: 720px;
     }
-    .container{
-    width: 720px;
-    }
-    section, header, footer{
-    width: 720px;
-    }
-    html{
-        width: 720px;
-    }
+    /* .footerC, .container, #cookieInfoS, #productVector{
 
-    #cookieInfoS{
-     width: 720px;
+    } */
+    .footerC, .container
+    {
+        width: 100%;
     }
-
-    #productVector{
-    width: 720px;
+    #cookieMainS{
+    width:  144rem;
+    height:68.2rem;
     }
+    
+    
 
 
 
@@ -891,7 +926,6 @@ input[type="email"]{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 68.2rem;
 }
 
 
@@ -1099,4 +1133,79 @@ input[type="email"]{
     font-family: "Inria Serif";
     width: 100%;
     background-color: transparent;
+}
+
+
+
+#aboutTexts p {
+  font-size: 1.6rem;
+  font-family: "Roboto Slab", serif;
+  line-height: 1.6;
+  color: #432E22;
+  margin-bottom: 1.2rem;
+}
+
+#anoutUl {
+  list-style: none;
+  margin: 0 auto;
+  max-width: 1100px;
+  gap: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+
+#anoutUl li:not(#aboutOneTxt) {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 3rem;
+}
+
+#anoutUl li:nth-child(even):not(#aboutOneTxt) {
+  grid-template-columns: 1fr 1fr;
+  direction: rtl; 
+}
+
+#anoutUl li:nth-child(even):not(#aboutOneTxt) img {
+  direction: ltr; 
+}
+
+#aboutOneTxt {
+  font-style: italic;
+  font-size: 1.8rem;
+  text-align: center;
+  max-width: 600px;
+  margin: 0 auto 4rem auto;
+  color: #6b4c3b;
+}
+
+#aboutS img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 12px;
+  box-shadow: 0 8px 15px rgba(0,0,0,0.1);
+  transition: transform 0.3s ease;
+}
+
+#aboutS img:hover {
+  transform: scale(1.05);
+}
+
+
+@media (max-width: 768px) {
+  #anoutUl li:not(#aboutOneTxt) {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  #anoutUl li:nth-child(even):not(#aboutOneTxt) {
+    direction: ltr;
+  }
+
+  #aboutOneTxt {
+    font-size: 1.5rem;
+    margin-bottom: 3rem;
+  }
 }
